
- @version-full@ (@release-date@)
    - Bugs fixed
        - Fixed HeaderReader#addValues method.
          Reported by Carsten Lohmann. 
        - Fixed the resolver hash model provided by the Freemarker 
          extension when underlying resolvers return TemplateModel 
          values and allowed access to Freemarker configuration shared 
          variables. Reported by sirthias.
          
- 2.0 Release Candidate 1 (2010-03-15)
    - API changes
        - Added a Router#getMatchingMode(Restlet) method which returns
          the default matching mode for the Router, except for target 
          that are instances of Directory or Router, where the 
          MODE_STARTS_WITH value is returned.
          Reported by Rhett Sutphin and Masaki Sudo.
        - Added Router#detach(Class) method.
          Suggested by Martin Kubincanek.
        - Added conveniency constructors to Atom classes.
        - Added new Relation constants in the Atom extension.
        - MediaType#getParent() now returns the same media type without
          parameters if some parameters are present.
        - Refactored Redirector. Renamed MODE_CLIENT_DISPATCHER into
          MODE_SERVER_OUTBOUND and MODE_SERVER_DISPATCHER into
          MODE_SERVER_INBOUND. Renamed redirectClientDispatcher() into
          outboundServerRedirect(). Renamed redirectServerDispatcher()
          into inboundServerRedirect(). Expose serverRedirect() method
          as protected.
        - Engine's BioUtils#write(InputStream, OutputStream) method was 
          renamed to copy(...).
        - Removed all Client#get/post/put/... methods not present in 
          Restlet 1.1.
        - Refactored XML extensions to share XPath evaluation logic.
          Added XmlRepresentation#getInputSource() abstract method.
        - Removed dependency from JAXB and JiBX extensions to the
          XML extension. JaxbRepresentation and JibxRepresentation 