@@ -11,6 +11,9 @@ Changes log
           extension when underlying resolvers return TemplateModel 
           values and allowed access to Freemarker configuration shared 
           variables. Reported by sirthias.
+        - Fixed the StringWriter implementation for the GWT edition.
+          Reported by Kelly McLaughlin. 
+          
           
 - 2.0 Release Candidate 1 (2010-03-15)
     - API changes
